# ChangeLog for kde-base/akonadi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/akonadi/ChangeLog,v 1.43 2009/12/01 09:55:21 wired Exp $

*akonadi-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org> +akonadi-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> akonadi-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> akonadi-4.3.3.ebuild:
  Add ~sparc

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> akonadi-4.3.3.ebuild:
  amd64 stable wrt #292455

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org> -akonadi-4.3.2.ebuild:
  Drop KDE 4.3.2

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org> -akonadi-4.2.4.ebuild:
  Drop KDE 4.2.4

*akonadi-4.3.3 (02 Nov 2009)

  02 Nov 2009; Alex Alexander <wired@gentoo.org> +akonadi-4.3.3.ebuild:
  Version bump

  18 Oct 2009; Markus Meier <maekke@gentoo.org> akonadi-4.3.1.ebuild:
  x86 stable, bug #287697

  17 Oct 2009; Jonathan Callen <abcd@gentoo.org> akonadi-4.3.1.ebuild,
  akonadi-4.3.2.ebuild:
  Disable src_test

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> akonadi-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> -akonadi-4.3.0.ebuild:
  Drop KDE 4.3.0

*akonadi-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> +akonadi-4.3.2.ebuild:
  Version bump

  21 Sep 2009; Dominik Kapusta <ayoy@gentoo.org> akonadi-4.3.1.ebuild:
  Fixed failing tests by removing X server dependency where unnecessary

  04 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org> akonadi-4.3.1.ebuild:
  Move the dep fix from overlay to tree.

*akonadi-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +akonadi-4.3.1.ebuild:
  Version bump

  04 Aug 2009; Alex Alexander <wired@gentoo.org> ChangeLog:
  manifest update (upstream tarball changed)
