@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/akonadi/akonadi-4.3.3.ebuild,v 1.4 2009/11/30 06:54:53 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/akonadi/akonadi-4.3.3.ebuild,v 1.5 2009/12/10 13:40:36 fauli Exp $
 
 EAPI="2"
 
@@ -14,7 +14,7 @@ fi
 inherit ${eclass}
 
 DESCRIPTION="An extensible cross-desktop storage service for PIM data and meta data"
-KEYWORDS="~alpha amd64 ~hppa ~ia64 ppc ppc64 ~sparc ~x86"
+KEYWORDS="~alpha amd64 ~hppa ~ia64 ppc ppc64 ~sparc x86"
 # add when libmapi becomes available with an ebuild
 #exchange
 IUSE="debug +semantic-desktop"
